@@ -16,6 +16,16 @@
    The license applies to all entries newer than 2009-04-28.
 */
 
+2014-10-03 15:03 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)(r366)
+  * hbqt/hbmk2_qt.hb
+    % Cosmetic change:  HBQTUI_PAD_30 => HBQTUI_PAD_35.
+
+  * hbqt/qtcore/hbqt_bind.cpp
+    + included patch from Francesco which deletes the SIGNALs physically.
+       Tested for all demo apps and HbIDE and has not found any issues.
+       This fix seems to be fixing the issue with destructors shown by 
+       Luigi.
+
 2014-10-02 16:50 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)(r365)
   * hbqt/hbmk2_qt.hb
     + Improved patch to define SIGNAL/SLOTS at design time, supplied by Francek.
